--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
   	<!---->
@@ -10,7 +11,7 @@
 		<div class="container">
 			<nav class="main-navigation">
 				<div class="index-logo">
-        			<img src="img/index-logo.png" width="#" height="#" alt="Gllacy Shop">
+        			<img src="img/logo.png" width="154" height="64" alt="Gllacy Shop">
       			</div>
 				<ul>
 					<li><a href="#">Каталог</a>
@@ -87,22 +88,22 @@
 		</section>
 		<section class="hits">
 			<div class="hit">
-				<img src="" alt="">
+				<img src="img/product-1.jpg" width="267" height="267" alt="">
 				<p>310 <span>руб.</span>/кг</p>
 				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
 			</div>
 			<div class="hit">
-				<img src="" alt="">
+				<img src="img/product-2.jpg" width="267" height="267" alt="">
 				<p>380 <span>руб.</span>/кг</p>
 				<a href="#">Сливочно-кофейное с кусочками шоколада</a>
 			</div>
 			<div class="hit">
-				<img src="" alt="">
+				<img src="img/product-3.jpg" width="267" height="267" alt="">
 				<p>355 <span>руб.</span>/кг</p>
 				<a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
 			</div>
 			<div class="hit">
-				<img src="" alt="">
+				<img src="img/product-4.jpg" width="267" height="267" alt="">
 				<p>415 <span>руб.</span>/кг</p>
 				<a href="#">Сливочное крем-брюле с карамельной подливкой</a>
 			</div>
