--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
   	<!---->
@@ -10,7 +11,7 @@
 		<div class="container">
 			<nav class="main-navigation">
 				<div class="index-logo">
-        			<img src="img/index-logo.png" width="#" height="#" alt="Gllacy Shop">
+        			<img src="img/logo.png" width="154" height="64" alt="Gllacy Shop">
       			</div>
 				<ul>
 					<li><a href="#">Каталог</a>
@@ -101,64 +102,64 @@
 		</section>
 		<section class="products">
 			<article class="product">
-				<img src="" alt="">
+				<img src="img/product-1.jpg" width="267" height="267" alt="">
 				<p>310 <span>руб.</span>/кг</p>
 				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
 			</article>
 			<article class="product">
-				<img src="" alt="">
+				<img src="img/product-2.jpg" width="267" height="267" alt="">
 				<p>310 <span>руб.</span>/кг</p>
 				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
 			</article>
 			<article class="product">
-				<img src="" alt="">
+				<img src="img/product-3.jpg" width="267" height="267" alt="">
 				<p>310 <span>руб.</span>/кг</p>
 				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
 			</article>
 			<article class="product">
-				<img src="" alt="">
-				<p>310 <span>руб.</span>/кг</p>
-				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-			</article>
-
-			<article class="product">
-				<img src="" alt="">
-				<p>310 <span>руб.</span>/кг</p>
-				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-			</article>
-			<article class="product">
-				<img src="" alt="">
-				<p>310 <span>руб.</span>/кг</p>
-				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-			</article>
-			<article class="product">
-				<img src="" alt="">
-				<p>310 <span>руб.</span>/кг</p>
-				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-			</article>
-			<article class="product">
-				<img src="" alt="">
+				<img src="img/product-4.jpg" width="267" height="267" alt="">
 				<p>310 <span>руб.</span>/кг</p>
 				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
 			</article>
 
 			<article class="product">
-				<img src="" alt="">
+				<img src="img/product-5.jpg" width="267" height="267" alt="">
 				<p>310 <span>руб.</span>/кг</p>
 				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
 			</article>
 			<article class="product">
-				<img src="" alt="">
+				<img src="img/product-6.jpg" width="267" height="267" alt="">
+				<p>310 <span>руб.</span>/кг</p>
+				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+			</article>
+			<article class="product">
+				<img src="img/product-7.jpg" width="267" height="267" alt="">
+				<p>310 <span>руб.</span>/кг</p>
+				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+			</article>
+			<article class="product">
+				<img src="img/product-8.jpg" width="267" height="267" alt="">
+				<p>310 <span>руб.</span>/кг</p>
+				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+			</article>
+
+			<article class="product">
+				<img src="img/product-9.jpg" width="267" height="267" alt="">
+				<p>310 <span>руб.</span>/кг</p>
+				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+			</article>
+			<article class="product">
+				<img src="img/product-10.jpg" width="267" height="267" alt="">
 				<p>310 <span>руб.</span>/кг</p>
 				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
 			</article>
 		    <article class="product">
-				<img src="" alt="">
+				<img src="img/product-11.jpg" width="267" height="267" alt="">
 				<p>310 <span>руб.</span>/кг</p>
 				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
 			</article>
 			<article class="product">
-				<img src="" alt="">
+				<img src="img/product-12.jpg" width="267" height="267" alt="">
 				<p>310 <span>руб.</span>/кг</p>
 				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
 			</article>
