--- a/catalog.html
+++ b/catalog.html
@@ -15,7 +15,7 @@
       			</div>
 				<ul>
 					<li><a href="#">Каталог</a>
-						<ul>
+						<ul class="catalog-nav">
 							<li><a href="#">Новинки</a></li>
 							<li><a href="#">Сливочное</a></li>
 							<li><a href="#">Щербеты</a></li>
@@ -49,7 +49,7 @@
 		</div>
 	</header>
 
-	<main class="container">
+	<main class="catalog-main container">
 		<div class="breadcrumbs">
 			<ul>
 				<li><a href="#">Главная</a></li>
@@ -174,7 +174,7 @@
 	    </div>
 	</main>
 
-	<footer class="main-footer">
+	<footer class="main-footer container clerfix">
 		<div class="footer-social">
             <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
             <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
