Правки для автоматической проверки

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:700,900,500&subset=latin,cyrillic" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <input type="radio" id="btn-1" name="toggle" checked>
-        <input type="radio" id="btn-2" name="toggle">
-        <input type="radio" id="btn-3" name="toggle">
+        <input type="radio" class="btn-1" id="btn-1" name="toggle" checked>
+        <input type="radio" class="btn-2" id="btn-2" name="toggle">
+        <input type="radio" class="btn-3" id="btn-3" name="toggle">
         <div class="site-wrapper">
             <div class="content-wrapper">
                 <div class="slider">
@@ -66,15 +66,15 @@
                         </div> 
                     </header>
             
-                    <div class="slide" id="slide1">
+                    <div class="slide slide1" id="slide1">
                         <div class="slide-title">Крем-брюле и пломбир с малиновым джемом</div>
                         <a class="slide-btn" href="#">Давайте оба!</a>
                     </div>
-                    <div class="slide" id="slide2">
+                    <div class="slide slide2" id="slide2">
                         <div class="slide-title">Шоколадный пломбир и лимонный сорбет</div>
                         <a class="slide-btn" href="#">Давайте оба!</a>
                     </div>
-                    <div class="slide" id="slide3">
+                    <div class="slide slide3" id="slide3">
                         <div class="slide-title">Пломбир с помадкой и клубничный щербет</div>
                         <a class="slide-btn" href="#">Давайте оба!</a>
                     </div>
